# boto_test

./: .dockerignore  .env_example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.ini  requirements.txt
devops/backend/: Dockerfile
src/: __main__.py  bot.py  callback_data.py  fsm.py  keyboards.py  local_db.py  log.py  main.py  utils.py
src/backend/: alembic.ini  main.py  runserver.py
src/backend/auth/: models.py
src/backend/auth/models/: __init__.py  person.py  role.py  users.py  users_roles.py
src/backend/database/: connection.py  mixins.py
src/backend/migrations/: env.py
src/backend/migrations/versions/: 9d6d0a44caa3_initial_migration.py
